# HH_Bot

./: DataClass.py  Dockerfile  bot.py  main.py  pyproject.toml
.github/workflows/: action.yml
deploy/: .env_ci  docker-compose-ci.yml
