[tool.poetry]
name = "parcing"
version = "0.1.0"
description = ""
authors = ["Павел <king-he@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.28.2"
fake-useragent = "^1.1.3"
lxml = "^4.9.2"
pydantic = "^1.10.7"
asyncio = "^3.4.3"
aiogram = "^2.25.1"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
